<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.ShoeDetailFragment">

    <data>
        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.viewmodels.ShoeListViewModel" />
        <import type="com.udacity.shoestore.utils.Converter"/>

    </data>

    <!-- ConstraintLayout allows a more complex design to locate all the Views -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/save_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancel_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/cancel_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/save_button" />

        <EditText
            android:id="@+id/shoe_name_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/shoe_name_hint"
            android:inputType="textShortMessage"
            android:text="@={shoeViewModel.shoe.name}"
            app:layout_constraintBottom_toTopOf="@+id/shoe_size_field"
            app:layout_constraintStart_toStartOf="@+id/shoe_size_field"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/shoe_size_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/shoe_size_hint"
            android:inputType="numberDecimal"
            android:text="@={Converter.doubleToString(shoeViewModel.shoe.size)}"
            app:layout_constraintBottom_toTopOf="@+id/shoe_company_field"
            app:layout_constraintStart_toStartOf="@+id/shoe_company_field"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_field" />

        <EditText
            android:id="@+id/shoe_company_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/shoe_company_hint"
            android:inputType="textShortMessage"
            android:text="@={shoeViewModel.shoe.company}"
            app:layout_constraintBottom_toTopOf="@+id/shoe_description_field"
            app:layout_constraintStart_toStartOf="@+id/shoe_description_field"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_field" />


        <EditText
            android:id="@+id/shoe_description_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/shoe_description_hint"
            android:inputType="textLongMessage|textMultiLine|text"
            android:text="@={shoeViewModel.shoe.description}"
            app:layout_constraintBottom_toTopOf="@+id/save_button"
            app:layout_constraintStart_toEndOf="@+id/shoe_description_label"
            app:layout_constraintTop_toBottomOf="@+id/shoe_company_field" />

        <TextView
            android:id="@+id/shoe_company_label"
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/shoe_company_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_company_field"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/shoe_description_label"
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/shoe_description_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_description_field"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/shoe_name_label"
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_name_field"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/shoe_size_label"
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/shoe_size_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_size_field"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>