<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- ConstraintLayout is chosen for a best display of the elements -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.LoginFragment">

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/sign_up_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/login_button"
            app:layout_constraintTop_toBottomOf="@+id/password_field" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/sign_up_button"
            app:layout_constraintEnd_toStartOf="@+id/sign_up_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/email_field"
            style="@style/input_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/email_label"
            tools:layout_editor_absoluteX="16dp" />

        <EditText
            android:id="@+id/password_field"
            style="@style/input_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/password_label"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/password_label"
            style="@style/label_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/password_label"
            app:layout_constraintTop_toBottomOf="@+id/email_field"
            tools:layout_editor_absoluteX="27dp" />

        <TextView
            android:id="@+id/email_label"
            style="@style/label_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.36" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>