<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- LinearLayout is a good choice for a simple View
         with only Two TextViews and one Button -->
    <LinearLayout
        android:id="@+id/welcomeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".screens.WelcomeFragment">

        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title"
            style="@style/title_style" />

        <TextView
            android:id="@+id/welcome_description"
            style="@style/description_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_description"
            android:textAlignment="center" />

        <Button
            android:id="@+id/welcome_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/welcome_button" />


    </LinearLayout>
</layout>